name:                antioch
version:             0.0
synopsis:            <Project description>
description:         <Project description>
category:            
license:             GPL
license-file:        COPYING
author:              Eric Sessoms
maintainer:          nubgames@gmail.com
cabal-version:       >= 1.2
build-type:          Simple
build-depends:       array >= 0.2.0.0,
                     base,
                     HDBC >= 1.1.5,
                     HDBC-odbc >= 1.1.4.4,
                     gnuplot >= 0.3,
                     mtl >= 1.1.0.2,
                     old-locale >= 1.0.0.1,
                     old-time >= 1.0.0.1,
                     QuickCheck >= 1.2.0.0,
                     time >= 1.1.2.2
exposed-modules:     Antioch.DateTime,
                     Antioch.Generators,
                     Antioch.Plots,
                     Antioch.Reports,
                     Antioch.SLALib,
                     Antioch.Schedule.Pack,
                     Antioch.Score,
                     Antioch.Statistics,
                     Antioch.Types,
                     Antioch.Utilities,
                     Antioch.Weather
ghc-options:         
hs-source-dirs:      src
